Create domains of quiz and category