@@ -5,6 +5,8 @@ import au.davidwrz.quizapp.utils.mapper.EntityMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -12,26 +14,48 @@ class AddQuizDtoMapper implements EntityMapper<Quiz, AddQuizDto> {
 
     @Override
     public Quiz toEntity(AddQuizDto addQuizDto) {
-        List<Answer> answers = addQuizDto.questions().stream()
+        List<Question> questions = addQuizDto.questions().stream()
+                .map(this::mapToAddQuestion)
+                .collect(Collectors.toList());
+
+        Category category = toCategoryEntity(addQuizDto.category(), questions);
+
+        List<Answer> allAnswers = questions.stream()
                 .flatMap(question -> question.getAnswers().stream())
-                .map(this::toAnswerEntity)
-                .toList();
-//TODO
-//        List<AddQuestionDto> questions = addQuizDto.questions();
-//        for (AddQuestionDto questionDto : questions) {
-//             question = addQuestionDtoMapper.toEntity(addQuizDto.questions());
-//            answers.forEach(a -> a.setQuestion(question));
-//            question.setAnswers(answers);
-//            Question question = Question.of(questionDto.getContent(),);
-//        }
-//        Category category = toCategoryEntity(addQuizDto.category(), null);
-//        return Quiz.of(category, )
-        return null;
+                .collect(Collectors.toList());
+
+        setQuestionReferences(allAnswers, questions);
+
+        return Quiz.of(category, questions);
+    }
+
+    private Question mapToAddQuestion(AddQuestionDto addQuestionDto) {
+        List<Answer> answers = addQuestionDto.getAnswers().stream()
+                .map(this::toAnswerEntityFromAddAnswerDto)
+                .collect(Collectors.toList());
+
+        Question question = Question.of(addQuestionDto.getContent());
+        question.setAnswers(answers);
+        return question;
+    }
+
+
+    private void setQuestionReferences(List<Answer> allAnswers, List<Question> questions) {
+        Map<Integer, Question> questionMap = questions.stream()
+                .collect(Collectors.toMap(Question::getId, Function.identity()));
+
+        allAnswers.forEach(answer -> {
+            Integer questionId = answer.getQuestion().getId();
+            Question mappedQuestion = questionMap.get(questionId);
+            answer.setQuestion(mappedQuestion);
+        });
     }
 
     private Category toCategoryEntity(String categoryName, List<Question> questions) {
         Type type = toType(categoryName);
-        return Category.of(type, questions);
+        Category category = Category.of(type, questions);
+        questions.forEach(question -> question.getCategories().add(category));
+        return category;
     }
 
     private Type toType(String categoryName) {
@@ -40,6 +64,10 @@ class AddQuizDtoMapper implements EntityMapper<Quiz, AddQuizDto> {
         } catch (IllegalArgumentException e) {
             throw new InvalidQuestionException(categoryName + " does not exist!");
         }
+    }
+
+    private Answer toAnswerEntityFromAddAnswerDto(AddQuestionDto.AddAnswerDto addAnswerDto) {
+        return Answer.of(addAnswerDto.answer(), addAnswerDto.correct());
     }
 
     private Answer toAnswerEntity(AddQuestionDto.AddAnswerDto addAnswerDto) {
